--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
+<style>
+body{
+  background-color: purple;
+
+}
+
+p {
+    font-family: verdana;
+    font-size: 20px;
+}
+
+</style>
 <body>
 
 <div class="jumbotron text-center">
@@ -30,7 +42,7 @@
     <div class="col-sm-4">
       <h3>Looking for utensils?</h3>
       <p>We have everything rangingfrom pots , spoons..</p>
-      
+
     </div>
   </div>
 </div>
